--- a/templates/aws-vpc.template.yaml
+++ b/templates/aws-vpc.template.yaml
@@ -1417,6 +1417,30 @@ Outputs:
     Value: !Ref 'NAT4EIP'
     Export:
       Name: !Sub '${AWS::StackName}-NAT4EIP'
+  NATGateway1:
+    Condition: NATGateways&PublicSubnets&PrivateSubnetsCondition
+    Description: NATGateway 1 ID
+    Value: !Ref 'NATGateway1'
+    Export:
+      Name: !Sub '${AWS::StackName}-NATGateway1'
+  NATGateway2:
+    Condition: NATGateways&PublicSubnets&PrivateSubnetsCondition
+    Description: NATGateway 2 ID
+    Value: !Ref 'NATGateway2'
+    Export:
+      Name: !Sub '${AWS::StackName}-NATGateway2'
+  NATGateway3:
+    Condition: NATGateways&PublicSubnets&PrivateSubnets&3AZCondition
+    Description: NATGateway 3 ID
+    Value: !Ref 'NATGateway3'
+    Export:
+      Name: !Sub '${AWS::StackName}-NATGateway3'
+  NATGateway4:
+    Condition: NATGateways&PublicSubnets&PrivateSubnets&4AZCondition
+    Description: NATGateway 4 ID
+    Value: !Ref 'NATGateway4'
+    Export:
+      Name: !Sub '${AWS::StackName}-NATGateway4'
   PrivateSubnet1ACIDR:
     Condition: PrivateSubnetsCondition
     Description: Private subnet 1A CIDR in Availability Zone 1
