updated json template and suffixed ouput names with uid=502(sumanth) gid=20(staff) groups=20(staff),12(everyone),61(localaccounts),79(_appserverusr),80(admin),81(_appserveradm),98(_lpadmin),101(access_bpf),702(com.apple.sharepoint.group.2),33(_appstore),100(_lpoperator),204(_developer),250(_analyticsusers),395(com.apple.access_ftp),398(com.apple.access_screensharing),399(com.apple.access_ssh),400(com.apple.access_remote_ae),701(com.apple.sharepoint.group.1)
Signed-off-by: Sumanth Lingappa <sumanth.lingappa@citrix.com>

--- a/templates/aws-vpc.template.yaml
+++ b/templates/aws-vpc.template.yaml
@@ -1417,25 +1417,25 @@ Outputs:
     Value: !Ref 'NAT4EIP'
     Export:
       Name: !Sub '${AWS::StackName}-NAT4EIP'
-  NATGateway1:
+  NATGateway1ID:
     Condition: NATGateways&PublicSubnets&PrivateSubnetsCondition
     Description: NATGateway 1 ID
     Value: !Ref 'NATGateway1'
     Export:
       Name: !Sub '${AWS::StackName}-NATGateway1'
-  NATGateway2:
+  NATGateway2ID:
     Condition: NATGateways&PublicSubnets&PrivateSubnetsCondition
     Description: NATGateway 2 ID
     Value: !Ref 'NATGateway2'
     Export:
       Name: !Sub '${AWS::StackName}-NATGateway2'
-  NATGateway3:
+  NATGateway3ID:
     Condition: NATGateways&PublicSubnets&PrivateSubnets&3AZCondition
     Description: NATGateway 3 ID
     Value: !Ref 'NATGateway3'
     Export:
       Name: !Sub '${AWS::StackName}-NATGateway3'
-  NATGateway4:
+  NATGateway4ID:
     Condition: NATGateways&PublicSubnets&PrivateSubnets&4AZCondition
     Description: NATGateway 4 ID
     Value: !Ref 'NATGateway4'
