--- a/templates/aws-vpc.template
+++ b/templates/aws-vpc.template
@@ -3159,6 +3159,54 @@
                 }
             }
         },
+        "NATGateway1ID": {
+            "Condition": "PrivateSubnetsCondition",
+            "Description": "NATGateway 1 ID",
+            "Value": {
+                "Ref": "NATGateway1"
+            },
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-NATGateway1"
+                }
+            }
+         },
+         "NATGateway2ID": {
+            "Condition": "PrivateSubnetsCondition",
+            "Description": "NATGateway 2 ID",
+            "Value": {
+                "Ref": "NATGateway2"
+            },
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-NATGateway2"
+                }
+            }
+         },
+         "NATGateway3ID": {
+            "Condition": "PrivateSubnets&3AZCondition",
+            "Description": "NATGateway 3 ID",
+            "Value": {
+                "Ref": "NATGateway3"
+            },
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-NATGateway3"
+                }
+            }
+         },
+         "NATGateway4ID": {
+            "Condition": "PrivateSubnets&4AZCondition",
+            "Description": "NATGateway 4 ID",
+            "Value": {
+                "Ref": "NATGateway4"
+            },
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-NATGateway4"
+                }
+            }
+         },
         "PrivateSubnet1ACIDR": {
             "Condition": "PrivateSubnetsCondition",
             "Description": "Private subnet 1A CIDR in Availability Zone 1",
