Remove Tokyo from 4 AZ tests
* apne1-az3 is currently unavailable

--- a/.taskcat.yml
+++ b/.taskcat.yml
@@ -99,7 +99,8 @@ tests:
       CreatePrivateSubnets: 'true'
       NumberOfAZs: '4'
     regions:
-      - ap-northeast-1
+      # 20220816 - apne1-az3 is currently unavailable
+      # - ap-northeast-1
       - ap-northeast-2
       - us-east-1
       - us-west-2
@@ -110,7 +111,8 @@ tests:
       CreatePrivateSubnets: 'false'
       NumberOfAZs: '4'
     regions:
-      - ap-northeast-1
+      # 20220816 - apne1-az3 is currently unavailable
+      # - ap-northeast-1
       - ap-northeast-2
       - us-east-1
       - us-west-2
