Fix previously broken 4az-public test

--- a/.taskcat.yml
+++ b/.taskcat.yml
@@ -108,6 +108,7 @@ tests:
     parameters:
       AvailabilityZones: $[taskcat_getaz_4]
       CreateAdditionalPrivateSubnets: 'false'
+      CreateNATGateways: 'false'
       CreatePrivateSubnets: 'false'
       NumberOfAZs: '4'
     regions:
